// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tabs examples AutomaticActivationTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="With automatic activation - horizontal tabs"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-auto-activation-tabs-example-0-auto-activation-tabs-0"
        aria-selected="true"
        class="v-button v-button-large v-button-tertiary"
        id="nova-auto-activation-tabs-example-0-auto-activation-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button=""
      >
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-auto-activation-tabs-example-1-auto-activation-tabs-1"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-auto-activation-tabs-example-1-auto-activation-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-auto-activation-tabs-example-2-auto-activation-tabs-2"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-auto-activation-tabs-example-2-auto-activation-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-auto-activation-tabs-example-3-auto-activation-tabs-3"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-auto-activation-tabs-example-3-auto-activation-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-auto-activation-tabs-example-0-auto-activation-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-auto-activation-tabs-example-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-auto-activation-tabs-example-1-auto-activation-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-auto-activation-tabs-example-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-auto-activation-tabs-example-2-auto-activation-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-auto-activation-tabs-example-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-auto-activation-tabs-example-3-auto-activation-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-auto-activation-tabs-example-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples HorizontalAlternateTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-alternate v-surface"
    valternate=""
    vsurface=""
  >
    <ul
      aria-label="Alternate horizontal tabs"
      class="v-tabs v-tabs-horizontal"
      role="tablist"
      v-tabs=""
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-horizontal-alternate-example-0-horizontal-alternate-0"
          aria-selected="true"
          class="v-button v-button-large v-button-tertiary"
          id="nova-horizontal-alternate-example-0-horizontal-alternate-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button=""
        >
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-horizontal-alternate-example-1-horizontal-alternate-1"
          aria-selected="false"
          class="v-button v-button-large v-button-tertiary"
          id="nova-horizontal-alternate-example-1-horizontal-alternate-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-horizontal-alternate-example-2-horizontal-alternate-2"
          aria-selected="false"
          class="v-button v-button-large v-button-tertiary"
          id="nova-horizontal-alternate-example-2-horizontal-alternate-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-horizontal-alternate-example-3-horizontal-alternate-3"
          aria-selected="false"
          class="v-button v-button-large v-button-tertiary"
          id="nova-horizontal-alternate-example-3-horizontal-alternate-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      aria-labelledby="nova-horizontal-alternate-example-0-horizontal-alternate-0"
      class="v-surface v-elevation-inset v-my-8 v-p-10"
      id="nova-horizontal-alternate-example-0"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface=""
    >
       This is content area for label 1 
    </div>
    <div
      aria-labelledby="nova-horizontal-alternate-example-1-horizontal-alternate-1"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
      id="nova-horizontal-alternate-example-1"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface=""
    >
       This is content area for label 2 
    </div>
    <div
      aria-labelledby="nova-horizontal-alternate-example-2-horizontal-alternate-2"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
      id="nova-horizontal-alternate-example-2"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface=""
    >
       This is content area for label 3 
    </div>
    <div
      aria-labelledby="nova-horizontal-alternate-example-3-horizontal-alternate-3"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
      id="nova-horizontal-alternate-example-3"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface=""
    >
       This is content area for label 4 
    </div>
    
  </div>
</div>
`;

exports[`Tabs examples HorizontalDefaultTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Default horizontal tab"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-0-horizontal-tabs-0"
        aria-selected="true"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-0-horizontal-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button=""
      >
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-1-horizontal-tabs-1"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-1-horizontal-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-2-horizontal-tabs-2"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-2-horizontal-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-3-horizontal-tabs-3"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-3-horizontal-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-horizontal-tabs-0-horizontal-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-horizontal-tabs-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-1-horizontal-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-2-horizontal-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-3-horizontal-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples HorizontalDisabledTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Disabled horizontal tab"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-disabled-tabs-0-horizontal-disabled-tabs-0"
        aria-selected="true"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-disabled-tabs-0-horizontal-disabled-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button=""
      >
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-disabled-tabs-1-horizontal-disabled-tabs-1"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-disabled-tabs-1-horizontal-disabled-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-disabled-tabs-2-horizontal-disabled-tabs-2"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        disabled="disabled"
        id="nova-horizontal-disabled-tabs-2-horizontal-disabled-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-disabled-tabs-3-horizontal-disabled-tabs-3"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-disabled-tabs-3-horizontal-disabled-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-horizontal-disabled-tabs-0-horizontal-disabled-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-horizontal-disabled-tabs-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-horizontal-disabled-tabs-1-horizontal-disabled-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-disabled-tabs-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-horizontal-disabled-tabs-2-horizontal-disabled-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-disabled-tabs-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-horizontal-disabled-tabs-3-horizontal-disabled-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-disabled-tabs-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples HorizontalWithIconTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Horizontal tab with icon"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-with-icon-0-horizontal-tabs-with-icon-0"
        aria-selected="true"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-with-icon-0-horizontal-tabs-with-icon-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-statistics v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-statistics-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
          />
          <path
            class="v-icon-primary"
            d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
          />
        </svg>
        
        
        
        
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-with-icon-1-horizontal-tabs-with-icon-1"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-with-icon-1-horizontal-tabs-with-icon-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-tiny v-icon-topic v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-topic-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M8 4.99609C9.10457 4.99609 10 5.89152 10 6.99609C10 8.10066 9.10457 8.99609 8 8.99609C6.89543 8.99609 6 8.10066 6 6.99609C6 5.89152 6.89543 4.99609 8 4.99609Z"
          />
          <path
            class="v-icon-primary"
            d="M10 1C13.3137 1 16 3.68629 16 7C16 10.3137 13.3137 13 10 13H8L5 16V12.915C2.16245 12.4388 0 9.97288 0 7C0 3.68629 2.68629 1 6 1H10ZM6 3C3.79086 3 2 4.79086 2 7C2 9.20914 3.79086 11 6 11H10C12.2091 11 14 9.20914 14 7C14 4.79086 12.2091 3 10 3H6Z"
          />
        </svg>
        
        
        
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-with-icon-2-horizontal-tabs-with-icon-2"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-with-icon-2-horizontal-tabs-with-icon-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-email v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-email-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M16 14H0V6.71387L2 8.42773V12H14V5.17285L8.97656 9.48047C8.41483 9.96196 7.58517 9.96196 7.02344 9.48047L1.68262 4.90137L0 3.5V2H16V14ZM8 7.68262L12.2969 4H3.70312L8 7.68262Z"
          />
        </svg>
        
        
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-horizontal-tabs-with-icon-3-horizontal-tabs-with-icon-3"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-horizontal-tabs-with-icon-3-horizontal-tabs-with-icon-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
        
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-home v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-home-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
          />
          <path
            class="v-icon-primary"
            d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
        
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-horizontal-tabs-with-icon-0-horizontal-tabs-with-icon-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-horizontal-tabs-with-icon-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-with-icon-1-horizontal-tabs-with-icon-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-with-icon-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-with-icon-2-horizontal-tabs-with-icon-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-with-icon-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-horizontal-tabs-with-icon-3-horizontal-tabs-with-icon-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-horizontal-tabs-with-icon-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples HorizontalWithMenuTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-tab v-mobile-container-hide v-pb-0"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
    v-tab-item=""
    vcontainerhide="mobile"
    vpb="0"
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      aria-label="Account"
      buttoncolor="tertiary"
      buttonsize="large"
      class="v-button v-dropdown v-button-large v-button-tertiary"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-home v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-home-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
        />
        <path
          class="v-icon-primary"
          d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
       Label 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny v-tab-suffix"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-tab-suffix"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface v-flex v-flex-col v-p-4"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
      vflex=""
      vflexcol=""
      vp="4"
    >
      <a
        buttoncolor="tertiary"
        buttonsize="large"
        class="v-button v-button-large v-button-tertiary v-flex v-flex-row v-justify-content-start v-typography-label-large"
        href="./components/tabs"
        type="button"
        v-button=""
        vflex=""
        vjustifycontentstart=""
        vtypography="label-large"
      >
        Label 1
      </a>
      <button
        buttoncolor="tertiary"
        buttonsize="large"
        class="v-button v-button-large v-button-tertiary v-flex v-flex-row v-justify-content-start v-typography-label-large"
        href="./components/tabs"
        type="button"
        v-button=""
        vflex=""
        vjustifycontentstart=""
        vtypography="label-large"
      >
         Label 2 
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs examples StackedAlternateTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-alternate v-icon-two-color v-surface"
    v-icon-two-color=""
    valternate=""
    vsurface=""
  >
    <ul
      aria-label="Alternate stacked tabs"
      class="v-tabs v-tabs-horizontal"
      role="tablist"
      v-tabs=""
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-stacked-alternate-example-0-stacked-alternate-0"
          aria-selected="true"
          class="v-button v-button-stacked v-button-tertiary"
          id="nova-stacked-alternate-example-0-stacked-alternate-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button-stacked=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-home v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            v-icon-visa-home-low=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-stacked-alternate-example-1-stacked-alternate-1"
          aria-selected="false"
          class="v-button v-button-stacked v-button-tertiary"
          id="nova-stacked-alternate-example-1-stacked-alternate-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button-stacked=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-home v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            v-icon-visa-home-low=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-stacked-alternate-example-2-stacked-alternate-2"
          aria-selected="false"
          class="v-button v-button-stacked v-button-tertiary"
          id="nova-stacked-alternate-example-2-stacked-alternate-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button-stacked=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-home v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            v-icon-visa-home-low=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-stacked-alternate-example-3-stacked-alternate-3"
          aria-selected="false"
          class="v-button v-button-stacked v-button-tertiary"
          id="nova-stacked-alternate-example-3-stacked-alternate-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button-stacked=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-home v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            v-icon-visa-home-low=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      aria-labelledby="nova-stacked-alternate-example-0-stacked-alternate-0"
      class="v-surface v-elevation-inset v-my-8 v-p-10 v-surface-2"
      id="nova-stacked-alternate-example-0"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface="2"
    >
       This is content area for label 1 
    </div>
    <div
      aria-labelledby="nova-stacked-alternate-example-1-stacked-alternate-1"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10 v-surface-2"
      id="nova-stacked-alternate-example-1"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface="2"
    >
       This is content area for label 2 
    </div>
    <div
      aria-labelledby="nova-stacked-alternate-example-2-stacked-alternate-2"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10 v-surface-2"
      id="nova-stacked-alternate-example-2"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface="2"
    >
       This is content area for label 3 
    </div>
    <div
      aria-labelledby="nova-stacked-alternate-example-3-stacked-alternate-3"
      class="v-surface v-elevation-inset v-hide v-my-8 v-p-10 v-surface-2"
      id="nova-stacked-alternate-example-3"
      role="tabpanel"
      style="min-block-size: 200px;"
      vmy="8"
      vp="10"
      vsurface="2"
    >
       This is content area for label 4 
    </div>
    
  </div>
</div>
`;

exports[`Tabs examples StackedDefaultTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Default stacked tab"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-0-stacked-tabs-0"
        aria-selected="true"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-0-stacked-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button-stacked=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-home v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-home-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
          />
          <path
            class="v-icon-secondary"
            d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
          />
        </svg>
        
        
        
        
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-1-stacked-tabs-1"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-1-stacked-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-receipt v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-receipt-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
          />
          <path
            class="v-icon-primary"
            d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
          />
        </svg>
        
        
        
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-2-stacked-tabs-2"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-2-stacked-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-statistics v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-statistics-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
          />
          <path
            class="v-icon-primary"
            d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
          />
        </svg>
        
        
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-3-stacked-tabs-3"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-3-stacked-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-email v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-email-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
          />
        </svg>
        
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-stacked-tabs-0-stacked-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-stacked-tabs-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-1-stacked-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-2-stacked-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-3-stacked-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples StackedDisabledTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Disabled stacked tab"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-disabled-0-stacked-tabs-0"
        aria-selected="true"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-disabled-0-stacked-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button-stacked=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-home v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-home-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
          />
          <path
            class="v-icon-secondary"
            d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
          />
        </svg>
        
        
        
        
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-disabled-1-stacked-tabs-1"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-disabled-1-stacked-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-receipt v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-receipt-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
          />
          <path
            class="v-icon-primary"
            d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
          />
        </svg>
        
        
        
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-disabled-2-stacked-tabs-2"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        disabled="disabled"
        id="nova-stacked-tabs-disabled-2-stacked-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-statistics v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-statistics-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
          />
          <path
            class="v-icon-primary"
            d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
          />
        </svg>
        
        
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-disabled-3-stacked-tabs-3"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-disabled-3-stacked-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-email v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-email-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
          />
        </svg>
        
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-stacked-tabs-disabled-0-stacked-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-stacked-tabs-disabled-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-disabled-1-stacked-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-disabled-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-disabled-2-stacked-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-disabled-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-disabled-3-stacked-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-disabled-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples StackedWithNotificationsTabsComponent should render correctly 1`] = `
<div>
  <ul
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-0-stacked-tabs-0"
        aria-describedby="nova-stacked-tabs-0-stacked-tabs-notification-0"
        aria-selected="true"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-0-stacked-tabs-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button-stacked=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-home v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-home-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
          />
          <path
            class="v-icon-secondary"
            d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
          />
        </svg>
        
        
        
        
        <sup
          aria-label="3 unread notifications"
          class="v-badge v-badge-default v-badge-number"
          id="nova-stacked-tabs-0-stacked-tabs-notification-0"
          number=""
          v-badge=""
        >
           2 
        </sup>
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-1-stacked-tabs-1"
        aria-describedby="nova-stacked-tabs-1-stacked-tabs-notification-1"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-1-stacked-tabs-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-receipt v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-receipt-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
          />
          <path
            class="v-icon-primary"
            d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
          />
        </svg>
        
        
        
        <sup
          aria-label="3 unread notifications"
          class="v-badge v-badge-default v-badge-number"
          id="nova-stacked-tabs-1-stacked-tabs-notification-1"
          number=""
          v-badge=""
        >
           3 
        </sup>
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-2-stacked-tabs-2"
        aria-describedby="nova-stacked-tabs-2-stacked-tabs-notification-2"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-2-stacked-tabs-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-statistics v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-statistics-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
          />
          <path
            class="v-icon-primary"
            d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
          />
        </svg>
        
        
        <sup
          aria-label="3 unread notifications"
          class="v-badge v-badge-default v-badge-number"
          id="nova-stacked-tabs-2-stacked-tabs-notification-2"
          number=""
          v-badge=""
        >
           4 
        </sup>
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-stacked-tabs-3-stacked-tabs-3"
        aria-describedby="nova-stacked-tabs-3-stacked-tabs-notification-3"
        aria-selected="false"
        class="v-button v-button-stacked v-button-tertiary"
        id="nova-stacked-tabs-3-stacked-tabs-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button-stacked=""
      >
        
        
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-email v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-email-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
          />
        </svg>
        
        <sup
          aria-label="3 unread notifications"
          class="v-badge v-badge-default v-badge-number"
          id="nova-stacked-tabs-3-stacked-tabs-notification-3"
          number=""
          v-badge=""
        >
           5 
        </sup>
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-stacked-tabs-0-stacked-tabs-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-stacked-tabs-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-1-stacked-tabs-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-2-stacked-tabs-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-stacked-tabs-3-stacked-tabs-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-stacked-tabs-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples TabPanelTabsComponent should render correctly 1`] = `
<div>
  <ul
    aria-label="Tabs with tab panels"
    class="v-tabs v-tabs-horizontal"
    role="tablist"
    v-tabs=""
  >
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-tab-panel-auto-example-0-tab-panel-0"
        aria-selected="true"
        class="v-button v-button-large v-button-tertiary"
        id="nova-tab-panel-auto-example-0-tab-panel-0"
        role="tab"
        tabindex="0"
        type="button"
        v-button=""
      >
         Label 1 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-tab-panel-auto-example-1-tab-panel-1"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-tab-panel-auto-example-1-tab-panel-1"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 2 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-tab-panel-auto-example-2-tab-panel-2"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-tab-panel-auto-example-2-tab-panel-2"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 3 
      </button>
    </li>
    <li
      class="v-tab"
      role="none"
      v-tab-item=""
    >
      <button
        aria-controls="nova-tab-panel-auto-example-3-tab-panel-3"
        aria-selected="false"
        class="v-button v-button-large v-button-tertiary"
        id="nova-tab-panel-auto-example-3-tab-panel-3"
        role="tab"
        tabindex="-1"
        type="button"
        v-button=""
      >
         Label 4 
      </button>
    </li>
    
  </ul>
  <div
    aria-labelledby="nova-tab-panel-auto-example-0-tab-panel-0"
    class="v-surface v-elevation-inset v-my-8 v-p-10"
    id="nova-tab-panel-auto-example-0"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 1

  </div>
  <div
    aria-labelledby="nova-tab-panel-auto-example-1-tab-panel-1"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-tab-panel-auto-example-1"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 2

  </div>
  <div
    aria-labelledby="nova-tab-panel-auto-example-2-tab-panel-2"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-tab-panel-auto-example-2"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 3

  </div>
  <div
    aria-labelledby="nova-tab-panel-auto-example-3-tab-panel-3"
    class="v-surface v-elevation-inset v-hide v-my-8 v-p-10"
    id="nova-tab-panel-auto-example-3"
    role="tabpanel"
    style="min-block-size: 200px;"
    vmy="8"
    vp="10"
    vsurface=""
  >
     This is content area for label 4

  </div>
  
</div>
`;

exports[`Tabs examples VerticalAlternateTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-alternate v-surface v-gap-8 v-flex v-flex-row v-flex-wrap"
    valternate=""
    vflex=""
    vflexwrap=""
    vgap="8"
    vsurface=""
  >
    <ul
      aria-label="Alternate vertical tabs"
      aria-orientation="vertical"
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
      v-tabs=""
      vertical=""
      vflexbasis="30%"
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-alternate-example-0-vertical-alternate-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          id="nova-vertical-alternate-example-0-vertical-alternate-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button=""
        >
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-alternate-example-1-vertical-alternate-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-alternate-example-1-vertical-alternate-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-alternate-example-2-vertical-alternate-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-alternate-example-2-vertical-alternate-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-alternate-example-3-vertical-alternate-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-alternate-example-3-vertical-alternate-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      class="v-flex v-flex-grow v-flex-row"
      vflex=""
      vflexgrow=""
    >
      <div
        aria-labelledby="nova-vertical-alternate-example-0-vertical-alternate-0"
        class="v-surface v-elevation-inset v-p-10 v-surface-2"
        id="nova-vertical-alternate-example-0"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface="2"
      >
         This is content area for label 1 
      </div>
      <div
        aria-labelledby="nova-vertical-alternate-example-1-vertical-alternate-1"
        class="v-surface v-elevation-inset v-hide v-p-10 v-surface-2"
        id="nova-vertical-alternate-example-1"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface="2"
      >
         This is content area for label 2 
      </div>
      <div
        aria-labelledby="nova-vertical-alternate-example-2-vertical-alternate-2"
        class="v-surface v-elevation-inset v-hide v-p-10 v-surface-2"
        id="nova-vertical-alternate-example-2"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface="2"
      >
         This is content area for label 3 
      </div>
      <div
        aria-labelledby="nova-vertical-alternate-example-3-vertical-alternate-3"
        class="v-surface v-elevation-inset v-hide v-p-10 v-surface-2"
        id="nova-vertical-alternate-example-3"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface="2"
      >
         This is content area for label 4 
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tabs examples VerticalDefaultTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <ul
      aria-label="Default vertical tab"
      aria-orientation="vertical"
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
      v-tabs=""
      vertical=""
      vflexbasis="30%"
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-example-0-vertical-tabs-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-example-0-vertical-tabs-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button=""
        >
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-example-1-vertical-tabs-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-example-1-vertical-tabs-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-example-2-vertical-tabs-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-example-2-vertical-tabs-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-example-3-vertical-tabs-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-example-3-vertical-tabs-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      class="v-flex v-flex-grow v-flex-row"
      vflex=""
      vflexgrow=""
    >
      <div
        aria-labelledby="nova-vertical-tabs-example-0-vertical-tabs-0"
        class="v-surface v-elevation-inset v-p-10"
        id="nova-vertical-tabs-example-0"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 1 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-example-1-vertical-tabs-1"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-example-1"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 2 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-example-2-vertical-tabs-2"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-example-2"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 3 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-example-3-vertical-tabs-3"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-example-3"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 4 
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tabs examples VerticalDisabledTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <ul
      aria-label="Disabled vertical tab"
      aria-orientation="vertical"
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
      v-tabs=""
      vertical=""
      vflexbasis="30%"
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-disabled-tab-example-0-vertical-disabled-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          id="nova-vertical-disabled-tab-example-0-vertical-disabled-tab-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button=""
        >
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-disabled-tab-example-1-vertical-disabled-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-disabled-tab-example-1-vertical-disabled-tab-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-disabled-tab-example-2-vertical-disabled-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          disabled="disabled"
          id="nova-vertical-disabled-tab-example-2-vertical-disabled-tab-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-disabled-tab-example-3-vertical-disabled-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-disabled-tab-example-3-vertical-disabled-tab-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      class="v-flex v-flex-grow v-flex-row"
      vflex=""
      vflexgrow=""
    >
      <div
        aria-labelledby="nova-vertical-disabled-tab-example-0-vertical-disabled-tab-0"
        class="v-surface v-elevation-inset v-p-10"
        id="nova-vertical-disabled-tab-example-0"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 1 
      </div>
      <div
        aria-labelledby="nova-vertical-disabled-tab-example-1-vertical-disabled-tab-1"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-disabled-tab-example-1"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 2 
      </div>
      <div
        aria-labelledby="nova-vertical-disabled-tab-example-2-vertical-disabled-tab-2"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-disabled-tab-example-2"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 3 
      </div>
      <div
        aria-labelledby="nova-vertical-disabled-tab-example-3-vertical-disabled-tab-3"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-disabled-tab-example-3"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 4 
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tabs examples VerticalWithIconTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <ul
      aria-label="Vertical tab with icon"
      aria-orientation="vertical"
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
      v-tabs=""
      vertical=""
      vflexbasis="30%"
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-with-icon-example-0-vertical-tabs-with-icon-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-with-icon-example-0-vertical-tabs-with-icon-0"
          role="tab"
          tabindex="0"
          type="button"
          v-button=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-statistics v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-statistics-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-secondary"
              d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
            />
            <path
              class="v-icon-primary"
              d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
            />
          </svg>
          
          
          
          
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-with-icon-example-1-vertical-tabs-with-icon-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-with-icon-example-1-vertical-tabs-with-icon-1"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-tiny v-icon-topic v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-topic-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-secondary"
              d="M8 4.99609C9.10457 4.99609 10 5.89152 10 6.99609C10 8.10066 9.10457 8.99609 8 8.99609C6.89543 8.99609 6 8.10066 6 6.99609C6 5.89152 6.89543 4.99609 8 4.99609Z"
            />
            <path
              class="v-icon-primary"
              d="M10 1C13.3137 1 16 3.68629 16 7C16 10.3137 13.3137 13 10 13H8L5 16V12.915C2.16245 12.4388 0 9.97288 0 7C0 3.68629 2.68629 1 6 1H10ZM6 3C3.79086 3 2 4.79086 2 7C2 9.20914 3.79086 11 6 11H10C12.2091 11 14 9.20914 14 7C14 4.79086 12.2091 3 10 3H6Z"
            />
          </svg>
          
          
          
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-with-icon-example-2-vertical-tabs-with-icon-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-with-icon-example-2-vertical-tabs-with-icon-2"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
          
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-email v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-email-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M16 14H0V6.71387L2 8.42773V12H14V5.17285L8.97656 9.48047C8.41483 9.96196 7.58517 9.96196 7.02344 9.48047L1.68262 4.90137L0 3.5V2H16V14ZM8 7.68262L12.2969 4H3.70312L8 7.68262Z"
            />
          </svg>
          
          
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-vertical-tabs-with-icon-example-3-vertical-tabs-with-icon-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-vertical-tabs-with-icon-example-3-vertical-tabs-with-icon-3"
          role="tab"
          tabindex="-1"
          type="button"
          v-button=""
        >
          
          
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-home v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-home-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-secondary"
              d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      class="v-flex v-flex-grow v-flex-row"
      vflex=""
      vflexgrow=""
    >
      <div
        aria-labelledby="nova-vertical-tabs-with-icon-example-0-vertical-tabs-with-icon-0"
        class="v-surface v-elevation-inset v-p-10"
        id="nova-vertical-tabs-with-icon-example-0"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 1 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-with-icon-example-1-vertical-tabs-with-icon-1"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-with-icon-example-1"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 2 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-with-icon-example-2-vertical-tabs-with-icon-2"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-with-icon-example-2"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 3 
      </div>
      <div
        aria-labelledby="nova-vertical-tabs-with-icon-example-3-vertical-tabs-with-icon-3"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-vertical-tabs-with-icon-example-3"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 4 
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tabs examples VerticalWithMenuTabsComponent should render correctly 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="v-tabs v-tabs-vertical"
    role="tablist"
    v-tabs=""
    vertical=""
  >
    <div
      class="v-tab"
      disclosuretab=""
      v-tab-item=""
    >
      <button
        aria-expanded="false"
        aria-label="Alex Miller"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary"
        role="tab"
        type="button"
        v-button=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-home v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-home-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
          />
          <path
            class="v-icon-primary"
            d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
         Label 
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-tab-suffix"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-tab-suffix"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Tabs examples WithoutArrowNavigationTabsComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <ul
      aria-label="Without arrow key navigation - horizontal tabs"
      aria-orientation="vertical"
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
      v-tabs=""
      vertical=""
      vflexbasis="30%"
    >
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-no-arrow-nav-example-0-no-arrow-nav-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          id="nova-no-arrow-nav-example-0-no-arrow-nav-0"
          role="tab"
          type="button"
          v-button=""
        >
           Label 1 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-no-arrow-nav-example-1-no-arrow-nav-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-no-arrow-nav-example-1-no-arrow-nav-1"
          role="tab"
          type="button"
          v-button=""
        >
           Label 2 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-no-arrow-nav-example-2-no-arrow-nav-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-no-arrow-nav-example-2-no-arrow-nav-2"
          role="tab"
          type="button"
          v-button=""
        >
           Label 3 
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
        v-tab-item=""
      >
        <button
          aria-controls="nova-no-arrow-nav-example-3-no-arrow-nav-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          id="nova-no-arrow-nav-example-3-no-arrow-nav-3"
          role="tab"
          type="button"
          v-button=""
        >
           Label 4 
        </button>
      </li>
      
    </ul>
    <div
      class="v-flex v-flex-grow v-flex-row"
      vflex=""
      vflexgrow=""
    >
      <div
        aria-labelledby="nova-no-arrow-nav-example-0-no-arrow-nav-0"
        class="v-surface v-elevation-inset v-p-10"
        id="nova-no-arrow-nav-example-0"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 1 
      </div>
      <div
        aria-labelledby="nova-no-arrow-nav-example-1-no-arrow-nav-1"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-no-arrow-nav-example-1"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 2 
      </div>
      <div
        aria-labelledby="nova-no-arrow-nav-example-2-no-arrow-nav-2"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-no-arrow-nav-example-2"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 3 
      </div>
      <div
        aria-labelledby="nova-no-arrow-nav-example-3-no-arrow-nav-3"
        class="v-surface v-elevation-inset v-hide v-p-10"
        id="nova-no-arrow-nav-example-3"
        role="tabpanel"
        style="min-block-size: 200px;"
        vp="10"
        vsurface=""
      >
         This is content area for label 4 
      </div>
      
    </div>
  </div>
</div>
`;
